@@ -13,6 +13,7 @@ V4.1.0 (in progress)
 [FEATURE] : Add codename to pages
 [FEATURE] : Add database auto update
 [FEATURE] : Add auto resize on images for image and file objects
+[FEATURE] : Add atm-page and atm-website tags
 
 V4.0.2 (25/05/2010)
 [BUG] : Corrected bugs : 269, 270, 486, 497 (see http://www.automne.ws/bug/)
